# Autonomous_vehicle

./: README.md
microros_pio/micro_ros_arduino_examples_platformio/: README.md
microros_pio/micro_ros_arduino_examples_platformio/micro-ros-steering-pot/: micro-ros-pid-steering.ino  micro-ros-steering-pot.ino  new_steering_pid.ino  new_steering_pid_w_speed.ino  platformio.ini
microros_pio/micro_ros_arduino_examples_platformio/micro-ros-steering-pot/src/: main.cpp
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_IMU_ML/: micro-ros_IMU_ML.ino
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_IMU_ML/src/: main.cpp
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_addtwoints_service/: micro-ros_addtwoints_service.ino
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_addtwoints_service/src/: main.cpp
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_decibels/: micro-ros_decibels.ino
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_decibels/src/: main.cpp
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_golf_esp32/: micro-ros_golf_esp32.ino  platformio.ini
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_golf_esp32/src/: main.cpp
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_publisher/: micro-ros_publisher.ino
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_publisher/src/: main.cpp
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_reconnection_example/: micro-ros_reconnection_example.ino  platformio.ini
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_reconnection_example/src/: main.cpp
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_subscriber/: micro-ros_subscriber.ino
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_subscriber/src/: main.cpp
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_subscriber_twist/: micro-ros_subscriber_twist.ino
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_subscriber_twist/src/: main.cpp
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_tf_publisher/: micro-ros_tf_publisher.ino
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_tf_publisher/src/: main.cpp
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_time_sync/: micro-ros_time_sync.ino
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_time_sync/src/: main.cpp
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_types_handling/: micro-ros_types_handling.ino
microros_pio/micro_ros_arduino_examples_platformio/micro-ros_types_handling/src/: main.cpp
microros_pio/micro_ros_arduino_examples_platformio/platformio/: platformio.ini
ros2_ws/: pure_pursuit_speed.py
ros2_ws _my_pc/: frames_2026-03-03_13.24.49.gv  frames_2026-03-05_14.21.33.gv
ros2_ws _my_pc/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws _my_pc/log/: latest_build
ros2_ws _my_pc/src/: ros2-commands.txt
ros2_ws _my_pc/src/esp32_hardware/: package.xml
ros2_ws _my_pc/src/golf_cart_description/: poses_raw.txt
ros2_ws _my_pc/src/golf_cart_nav2/: setup.cfg  setup.py
ros2_ws _my_pc/src/lanelet2_rviz2/: CMakeLists.txt  README.md
ros2_ws _my_pc/src/lanelet2_rviz2/etc/: rviz01.rviz
ros2_ws _my_pc/src/lanelet2_rviz2/include/laneletvisualizer/: Lanelet.hpp  ParkingLot.hpp  ParkingSpace.hpp  triangulate_polygon.hpp
ros2_ws _my_pc/src/lanelet2_rviz2/launch/: visualize_osm.launch.py
ros2_ws _my_pc/src/lanelet2_rviz2/src/: laneletviz.cpp
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/src/: ros2-commands.txt
ros2_ws/src/esp32_hardware/: CMakeLists.txt  esp32_hardware.xml
ros2_ws/src/esp32_hardware/src/: esp32_hardware.cpp
ros2_ws/src/golf_cart_description/: CMakeLists.txt
ros2_ws/src/golf_cart_nav2/: package.xml  setup.py
ros2_ws/src/realsense-ros/: README.md
test_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test_ws/install/ackermann_vehicle/share/ackermann_vehicle/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
test_ws/install/ackermann_vehicle/share/ackermann_vehicle/config/: fake_controller.yaml
test_ws/install/ackermann_vehicle/share/ackermann_vehicle/description/: ackermann_robot.urdf.xacro  fake_cart.xacro
test_ws/install/ackermann_vehicle/share/ackermann_vehicle/launch/: rsp_launch.py
test_ws/log/: latest_build
test_ws/src/: frames_2026-02-05_15.37.37.gv
test_ws/src/ackermann_vehicle/: setup.cfg  setup.py
(+208 files in other folders)
